--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,7 +14,8 @@ jobs:
         
       - name: Set node version
         id: node_version
-        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
+        env:
+          NVMRC: $(cat .nvmrc)
       - uses: actions/setup-node@v2
         with:
           node-version: "${{ steps.node_version.outputs.NVMRC }}"
@@ -41,7 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ steps.calver.outputs.release }}
-          release_name: Release ${{ steps.calver.outputs.release }}
+          release_name: ${{ steps.calver.outputs.release }}
           body: |
             Changes in this Release
             - First Change
