--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set node version
         id: node_version
         env:
-          NVMRC: $(cat .nvmrc)
+          NVMRC: ::$(cat .nvmrc)
       - uses: actions/setup-node@v2
         with:
           node-version: "${{ steps.node_version.outputs.NVMRC }}"
