--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -18,7 +18,7 @@ jobs:
           NVMRC: ::$(cat .nvmrc)
       - uses: actions/setup-node@v2
         with:
-          node-version: "${{ steps.node_version.outputs.NVMRC }}"
+          node-version:  ${NVMRC}
           registry-url: "https://registry.npmjs.org"
 
       - name: Generate tag release
