--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,11 +14,10 @@ jobs:
         
       - name: Set node version
         id: node_version
-        env:
-          NVMRC: ::$(cat .nvmrc)
+        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
       - uses: actions/setup-node@v2
         with:
-          node-version:  ${NVMRC}
+          node-version: "${{ steps.node_version.outputs.NVMRC }}"
           registry-url: "https://registry.npmjs.org"
 
       - name: Generate tag release
