--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -52,3 +52,11 @@ jobs:
           discussion_category_name: "announcements"
           draft: false
           prerelease: false
+          
+      - name: Send Slack Notification
+        run: |
+          curl --request PUT \
+          --url 'https://hooks.slack.com/services/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' \
+          --header 'Content-type: application/json'
+          --header 'Accept: application/vnd.github.luke-cage-preview+json' \
+          --data-raw '{ "blocks": [{"type": "header", "text": { "type": "plain_text", "text": "${{ github.actor }} published new versions of Nimbus components 🚀", "emoji": true }}, { "type": "section", "text": { "type": "mrkdwn", "text": "The release of these updates can be found in the <https://github.com/TiendaNube/nimbus-design-system/discussions/95|repository> and also on our official website." }}, { "type": "section", "text": { "type": "mrkdwn", "text": "Release Notes" }, "accessory": { "type": "button", "text": { "type": "plain_text", "text": "Go", "emoji": true }, "url": "https://nimbus.nuvemshop.com.br/documentation/overview/releases", "action_id": "button-action" } }, { "type": "section", "text": { "type": "mrkdwn", "text": "Storybook documentation" }, "accessory": { "type": "button", "text": { "type": "plain_text", "text": "Go", "emoji": true }, "url": "https://tiendanube.github.io/nimbus-design-system", "action_id": "button-action" }}, { "type": "divider" }]}'
