chore: removed external dependency of @tiendanube/icons package

--- a/packages/react/src/atomic/Input/package.json
+++ b/packages/react/src/atomic/Input/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@nimbus-ds/icon": "workspace:^",
-    "@nimbus-ds/skeleton": "workspace:^",
-    "@tiendanube/icons": "^0.3.1"
+    "@nimbus-ds/icons": "workspace:^",
+    "@nimbus-ds/skeleton": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
