--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "yarn clean && yarn build:packages",
     "build:packages": "yarn build:tokens && node ./.scripts/build:packages",
+    "build:icons": "turbo run build --filter=@nimbus-ds/icons",
     "build:tokens": "turbo run build --filter=@nimbus-ds/tokens",
     "build:storybook": "build-storybook -c .storybook -o .build-storybook",
     "bump:check": "yarn version check",
