--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -9,7 +9,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "yarn optimize && yarn build:components && webpack && yarn clean:tmp",
+    "build": "yarn optimize && yarn build:components && webpack",
     "build:components": "svgr src/assets -d tmp",
     "optimize": "svgo src/assets",
     "clean": "yarn clean:tmp && rm -rf dist",
