--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom-interactions": "^0.10.1",
-    "@tiendanube/icons": "^0.3.1"
+    "@nimbus-ds/icons": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
