--- a/packages/react/src/atomic/Button/package.json
+++ b/packages/react/src/atomic/Button/package.json
@@ -32,8 +32,8 @@
   "devDependencies": {
     "@nimbus-ds/badge": "workspace:^",
     "@nimbus-ds/icon": "workspace:^",
+    "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/skeleton": "workspace:^",
-    "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
   }
 }
