--- a/packages/react/src/atomic/IconButton/package.json
+++ b/packages/react/src/atomic/IconButton/package.json
@@ -30,7 +30,7 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@tiendanube/icons": "^0.3.1",
+    "@nimbus-ds/icons": "workspace:^",
     "webpack": "^5.74.0"
   }
 }
