--- a/packages/react/src/atomic/Label/package.json
+++ b/packages/react/src/atomic/Label/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@nimbus-ds/icon": "workspace:^",
-    "@tiendanube/icons": "^0.3.1",
+    "@nimbus-ds/icons": "workspace:^",
     "webpack": "^5.74.0"
   }
 }
