--- a/packages/react/src/atomic/Tag/package.json
+++ b/packages/react/src/atomic/Tag/package.json
@@ -29,8 +29,8 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
+    "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/text": "workspace:^",
-    "@tiendanube/icons": "^0.3.1",
     "webpack": "^5.74.0"
   }
 }
