chore: remove deprecated set-output usage in github actions

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Run build tokens
         run: npm run build:tokens
 
+      - name: Run build icons
+        run: npm run build:icons
+
       - name: Run lint
         run: yarn lint
 
