--- a/packages/react/src/atomic/Label/package.json
+++ b/packages/react/src/atomic/Label/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/label",
-  "version": "2.0.0",
+  "version": "2.1.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.0.0"
 }
