--- a/packages/react/src/composite/Alert/package.json
+++ b/packages/react/src/composite/Alert/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/alert",
-  "version": "2.0.0",
+  "version": "2.1.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nimbus-ds/icon": "workspace:^",
+    "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/skeleton": "workspace:^",
     "@nimbus-ds/title": "workspace:^"
   },
@@ -34,5 +35,6 @@
     "@nimbus-ds/box": "workspace:^",
     "@nimbus-ds/button": "workspace:^",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.0.0"
 }
