--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,19 +10,20 @@ on:
       - ".yarn/versions/**"
 
 jobs:
-  publish:
+  publish-packages-npm:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set node version
+      - name: Read Node version
         id: node_version
-        run: echo ::set-output name=NVMRC::$(cat .nvmrc)
-      - uses: actions/setup-node@v2
+        run: echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_OUTPUT
+        
+      - name: Set Node version
+        uses: actions/setup-node@v2
         with:
-          node-version: "${{ steps.node_version.outputs.NVMRC }}"
-          registry-url: "https://registry.npmjs.org"
+          node-version: '${{ steps.node_version.outputs.NVMRC }}'
 
       - name: Install dependencies
         run: yarn
@@ -53,13 +54,17 @@ jobs:
           --header 'Authorization: token ${{ secrets.PAT_CHANGE_BRANCH_PROTECTION_RULES_FROM_JUNIOR_CONQUISTA }}' \
           --header 'Accept: application/vnd.github.luke-cage-preview+json' \
           --data '{"enforce_admins":true,"required_pull_request_reviews":{"dismiss_stale_reviews":true,"require_code_owner_reviews":true,"required_approving_review_count":2},"required_conversation_resolution":true,"required_status_checks":null,"restrictions":null,"required_linear_history":true}'
-
+          
+  create-github-relase:
+    runs-on: ubuntu-latest
+    needs: publish-packages-npm
+    steps:
       - name: Generate tag release
         uses: StephaneBour/actions-calver@master
         id: calver
         with:
           date_format: "%Y.%m.%d"
-          release: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+          release: ${{ github.event_name == 'merge' && github.ref == 'refs/heads/master' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
