--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/components",
-  "version": "2.7.0",
+  "version": "2.8.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom-interactions": "^0.10.1",
-    "@tiendanube/icons": "^0.3.1"
+    "@nimbus-ds/icons": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -31,5 +31,6 @@
   },
   "devDependencies": {
     "webpack": "^5.75.0"
-  }
+  },
+  "stableVersion": "2.7.0"
 }
