--- a/packages/react/src/atomic/Input/package.json
+++ b/packages/react/src/atomic/Input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/input",
-  "version": "2.0.0",
+  "version": "2.1.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@nimbus-ds/icon": "workspace:^",
-    "@nimbus-ds/skeleton": "workspace:^",
-    "@tiendanube/icons": "^0.3.1"
+    "@nimbus-ds/icons": "workspace:^",
+    "@nimbus-ds/skeleton": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -32,5 +32,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.0.0"
 }
