--- a/packages/react/src/atomic/Link/package.json
+++ b/packages/react/src/atomic/Link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/link",
-  "version": "3.3.0",
+  "version": "3.4.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -29,7 +29,8 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@tiendanube/icons": "^0.3.1",
+    "@nimbus-ds/icons": "workspace:^",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "3.3.0"
 }
