--- a/packages/react/src/composite/Modal/package.json
+++ b/packages/react/src/composite/Modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/modal",
-  "version": "1.0.0",
+  "version": "1.1.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -16,7 +16,7 @@
   "dependencies": {
     "@floating-ui/react-dom-interactions": "^0.10.1",
     "@nimbus-ds/icon": "workspace:^",
-    "@tiendanube/icons": "^0.3.1"
+    "@nimbus-ds/icons": "workspace:^"
   },
   "peerDependencies": {
     "react": "^16.8 || ^17.0 || ^18.0",
@@ -36,5 +36,6 @@
     "@nimbus-ds/text": "workspace:^",
     "@nimbus-ds/title": "workspace:^",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "1.0.0"
 }
