feat: update versions

--- a/.github/workflows/publish-codecov.yml
+++ b/.github/workflows/publish-codecov.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Run build tokens
         run: yarn build:tokens
 
+      - name: Run build icons
+        run: yarn build:icons
+
       - name: Run tests
         run: yarn test:ci
 
