--- a/packages/react/src/atomic/Tag/package.json
+++ b/packages/react/src/atomic/Tag/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tag",
-  "version": "2.2.0",
+  "version": "2.2.1-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/text": "workspace:^",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.2.0"
 }
