--- a/packages/react/src/composite/Table/package.json
+++ b/packages/react/src/composite/Table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/table",
-  "version": "1.2.0",
+  "version": "1.2.1-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -27,5 +27,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "1.2.0"
 }
