--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/components",
-  "version": "2.10.0-rc.8",
+  "version": "2.10.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,6 +31,5 @@
   },
   "devDependencies": {
     "webpack": "^5.75.0"
-  },
-  "stableVersion": "2.9.0"
+  }
 }
