--- a/packages/react/src/atomic/Badge/package.json
+++ b/packages/react/src/atomic/Badge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/badge",
-  "version": "3.1.1-rc.8",
+  "version": "3.1.1",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,6 +32,5 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "3.1.0"
+  }
 }
