--- a/packages/react/src/atomic/Checkbox/package.json
+++ b/packages/react/src/atomic/Checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/checkbox",
-  "version": "2.1.1-rc.8",
+  "version": "2.1.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,6 +32,5 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "2.1.0"
+  }
 }
