--- a/packages/react/src/atomic/Icon/package.json
+++ b/packages/react/src/atomic/Icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/icon",
-  "version": "2.2.1-rc.8",
+  "version": "2.2.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,6 +31,5 @@
   "devDependencies": {
     "@nimbus-ds/icons": "workspace:^",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "2.2.0"
+  }
 }
