--- a/packages/react/src/atomic/Text/package.json
+++ b/packages/react/src/atomic/Text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/text",
-  "version": "5.2.0-rc.8",
+  "version": "5.2.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -30,6 +30,5 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "5.1.0"
+  }
 }
