--- a/packages/react/src/composite/Accordion/package.json
+++ b/packages/react/src/composite/Accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/accordion",
-  "version": "1.2.1-rc.8",
+  "version": "1.2.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -36,6 +36,5 @@
     "@nimbus-ds/card": "workspace:^",
     "@nimbus-ds/radio": "workspace:^",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "1.2.0"
+  }
 }
