--- a/packages/react/src/composite/Sidebar/package.json
+++ b/packages/react/src/composite/Sidebar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/sidebar",
-  "version": "2.1.1-rc.8",
+  "version": "2.1.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -34,6 +34,5 @@
     "@nimbus-ds/button": "workspace:^",
     "@nimbus-ds/text": "workspace:^",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "2.1.0"
+  }
 }
