--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -28,3 +28,4 @@ jobs:
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - run: snyk test --all-projects
