--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reset": "yarn clean && rm -rf node_modules .yarn/cache",
     "storybook": "start-storybook -p 6006 --ci",
     "start:dev": "yarn storybook",
+    "scan:snyk": "snyk test --all-projects",
     "test": "jest --passWithNoTests --no-cache --runInBand --watchAll=false",
     "test:ci": "yarn types:check && jest --ci --coverage",
     "test:coverage": "yarn test --coverage",
@@ -107,6 +108,7 @@
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.7.1",
+    "snyk": "^1.1115.0",
     "storybook-dark-mode": "^2.0.6",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.4.2",
