--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,13 @@
     {
       "files": ["*.mdx"],
       "extends": ["plugin:mdx/overrides"]
+    },
+    {
+      "files": ["nimbus-*.css.ts"],
+      "rules": {
+        "camelcase": "off",
+        "babel/camelcase": "off"
+      }
     }
   ],
   "globals": {
