--- a/packages/core/webpack/package.json
+++ b/packages/core/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/webpack",
-  "version": "1.0.0",
+  "version": "1.1.0-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -29,5 +29,6 @@
     "webpack": "^5.75.0",
     "webpack-merge": "^5.8.0",
     "webpack-shell-plugin-next": "^2.3.1"
-  }
+  },
+  "stableVersion": "1.0.0"
 }
