--- a/packages/react/src/composite/Tabs/package.json
+++ b/packages/react/src/composite/Tabs/package.json
@@ -26,7 +26,8 @@
     "url": "https://github.com/TiendaNube/nimbus-design-system/issues"
   },
   "devDependencies": {
-    "@vanilla-extract/dynamic": "^2.0.2",
+    "@nimbus-ds/box": "workspace:^",
+    "@nimbus-ds/text": "workspace:^",
     "webpack": "^5.74.0"
   }
 }
