feat: publish release candidate

--- a/packages/react/src/atomic/Toggle/package.json
+++ b/packages/react/src/atomic/Toggle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/toggle",
-  "version": "2.1.1",
+  "version": "2.2.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,5 +31,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.1.1"
 }
