--- a/packages/react/src/atomic/FileUploader/package.json
+++ b/packages/react/src/atomic/FileUploader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/file-uploader",
-  "version": "2.4.1",
+  "version": "2.5.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -34,5 +34,6 @@
   "devDependencies": {
     "@vanilla-extract/dynamic": "^2.0.2",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.4.1"
 }
