--- a/packages/react/src/atomic/List/package.json
+++ b/packages/react/src/atomic/List/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/list",
-  "version": "2.1.0",
+  "version": "2.2.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -30,5 +30,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.1.0"
 }
