--- a/packages/react/src/atomic/Popover/package.json
+++ b/packages/react/src/atomic/Popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/popover",
-  "version": "2.3.0",
+  "version": "3.0.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
     "@nimbus-ds/box": "workspace:^",
     "@vanilla-extract/dynamic": "^2.0.2",
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.3.0"
 }
