--- a/packages/react/src/atomic/Title/package.json
+++ b/packages/react/src/atomic/Title/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/title",
-  "version": "2.2.0",
+  "version": "3.0.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -30,5 +30,6 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  }
+  },
+  "stableVersion": "2.2.0"
 }
