feat: publish release

--- a/packages/react/src/atomic/Input/package.json
+++ b/packages/react/src/atomic/Input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/input",
-  "version": "2.3.0-rc.1",
+  "version": "2.3.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,6 +32,5 @@
   },
   "devDependencies": {
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "2.2.0"
+  }
 }
