--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/styles",
-  "version": "7.0.0-rc.3",
+  "version": "7.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -33,6 +33,5 @@
     "rainbow-sprinkles": "^0.14.0",
     "ts-node": "^10.9.1",
     "webpack": "^5.75.0"
-  },
-  "stableVersion": "6.13.0"
+  }
 }
