--- a/packages/react/src/atomic/Link/package.json
+++ b/packages/react/src/atomic/Link/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/link",
-  "version": "4.0.0-rc.1",
+  "version": "4.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,6 +31,5 @@
   "devDependencies": {
     "@nimbus-ds/icons": "workspace:^",
     "webpack": "^5.74.0"
-  },
-  "stableVersion": "3.6.0"
+  }
 }
