--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -22,7 +22,7 @@ jobs:
           node-version-file: ".nvmrc"
           cache: "yarn"
 
-      - name: Cache NPM dependencies # (2)
+      - name: Cache NPM dependencies
         uses: actions/cache@v3
         id: cache-dependencies
         with:
@@ -41,7 +41,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Cache NPM dependencies # (2)
+      - name: Cache NPM dependencies
         uses: actions/cache@v3
         id: cache-dependencies
         with:
