--- a/.github/workflows/publish-storybook.yml
+++ b/.github/workflows/publish-storybook.yml
@@ -1,4 +1,4 @@
-name: "Publish Storybook"
+name: "publish-storybook"
 
 on:
   push:
@@ -8,6 +8,9 @@ on:
 jobs:
   publish-storybook:
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
