--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "yarn clean && yarn build:packages",
     "build:packages": "yarn build:tokens && babel-node -x .ts ./.scripts/build-packages",
-    "build:docs": "yarn build:tokens && yarn build:icons && babel-node -x .ts ./.scripts/json-documentation",
+    "build:docs": "babel-node -x .ts ./.scripts/json-documentation",
     "build:icons": "turbo run build --filter=@nimbus-ds/icons",
     "build:tokens": "turbo run build --filter=@nimbus-ds/tokens",
     "build:storybook": "build-storybook -c .storybook -o .build-storybook",
