chore(deps-dev): bump webpack from 5.74.0 to 5.76.0

--- a/packages/core/webpack/package.json
+++ b/packages/core/webpack/package.json
@@ -8,6 +8,9 @@
     "README.md"
   ],
   "sideEffects": false,
+  "scripts": {
+    "g:webpack": "cd $INIT_CWD && webpack"
+  },
   "homepage": "https://nimbus.nuvemshop.com.br/documentation",
   "repository": {
     "type": "git",
