--- a/packages/react/src/atomic/Skeleton/package.json
+++ b/packages/react/src/atomic/Skeleton/package.json
@@ -9,7 +9,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "webpack",
+    "build": "yarn g:webpack",
     "clean": "rm -rf dist",
     "version": "yarn version"
   },
@@ -27,7 +27,6 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^",
-    "@vanilla-extract/dynamic": "^2.0.2",
-    "webpack": "^5.76.0"
+    "@vanilla-extract/dynamic": "^2.0.2"
   }
 }
