fix: add nimbus-ds/icon dependency to select

--- a/packages/react/src/atomic/Select/package.json
+++ b/packages/react/src/atomic/Select/package.json
@@ -14,6 +14,7 @@
     "version": "yarn version"
   },
   "dependencies": {
+    "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/skeleton": "workspace:^"
   },
