chore: publish release candidate

--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -1,13 +1,6 @@
 name: "generate-documentation"
 
-on:
-  push:
-    branches:
-      - master
-      - "!dependabot/**/**"
-    paths-ignore:
-      - "**/package.json"
-      - ".yarn/versions/**"
+on: workflow_dispatch
 
 jobs:
   setup:
