--- a/packages/react/src/atomic/Input/package.json
+++ b/packages/react/src/atomic/Input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/input",
-  "version": "2.3.1",
+  "version": "2.4.0-rc.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,5 +32,6 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "2.3.1"
 }
