fix: add bg color to icon when disabled

--- a/.eslintrc
+++ b/.eslintrc
@@ -95,7 +95,7 @@
     "prettier/prettier": [
       "warn",
       {
-        "singleQuote": true,
+        "singleQuote": false,
         "semi": true,
         "trailingComma": "none"
       }
